--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,16 @@ before_install:
   - docker build -t tgjhuijbers/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true tgjhuijbers/docker-react npm run test
+  - docker run -e CI=true tgjhuijbers/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-716398444810"
+  bucket_path: "docker-react"
+  on: 
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
